--- a/index.html
+++ b/index.html
@@ -1,174 +1,121 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cours 1 – Découverte des réseaux</title>
-  <link rel="stylesheet" href="toggle-correction.css">
 
+  <!-- Ton CSS existant -->
+  <link rel="stylesheet" href="toggle-correction.css"/>
+
+  <!-- Styles neutres (n'altèrent pas tes boutons) + thème -->
   <style>
-    /* =======================
-       🌗 Thèmes clair / sombre
-    ======================= */
     :root {
-      --bg-color: #f8f9fb;
-      --text-color: #111;
-      --accent-color: #0074cc;
-      --highlight-color: #f9a825;
-      --panel-bg: #ffffff;
+      --bg: #f8f9fb; --text:#111; --accent:#0074cc; --highlight:#f9a825; --panel:#ffffff;
     }
-
     [data-theme="dark"] {
-      --bg-color: #0f1117;
-      --text-color: #ffffff;
-      --accent-color: #2196f3;
-      --highlight-color: #fbc02d;
-      --panel-bg: #1a1c23;
+      --bg:#0f1117; --text:#fff; --accent:#2196f3; --highlight:#fbc02d; --panel:#1a1c23;
     }
-
-    body {
-      font-family: "Neo Sans Std", sans-serif;
-      background: var(--bg-color);
-      color: var(--text-color);
-      margin: 40px;
-      line-height: 1.6;
-      transition: background 0.4s ease, color 0.4s ease;
-    }
-
-    h1 {
-      color: var(--accent-color);
-      font-size: 1.8em;
-    }
-
-    h2 {
-      color: var(--highlight-color);
-      font-size: 1.4em;
-      margin-bottom: 1rem;
-    }
-
-    .details-wrap {
-      margin: 20px 0;
-    }
-
-    .correction-panel {
-      background: var(--panel-bg);
-      color: var(--text-color);
-      border-radius: 10px;
-      padding: 15px 20px;
-      margin-top: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.15);
-      transition: all 0.4s ease;
-      animation: fadeIn 0.4s ease;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-5px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* =======================
-       🌙 Bouton de thème
-    ======================= */
-    .theme-toggle {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background: var(--accent-color);
-      color: #fff;
-      border: none;
-      border-radius: 30px;
-      padding: 10px 20px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: background 0.3s ease, transform 0.2s ease;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-    }
-
-    .theme-toggle:hover {
-      background: var(--highlight-color);
-      color: #111;
-      transform: scale(1.05);
-    }
-
+    body { margin: 32px; font-family: "Neo Sans Std", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background: var(--bg); color: var(--text); line-height: 1.6; transition: background .3s, color .3s; }
+    h1 { color: var(--accent); font-size: 1.9rem; margin: 0 0 .5rem; }
+    h2 .title { color: var(--highlight); font-size: 1.4rem; }
+    .correction-panel { background: var(--panel); color: var(--text); border-radius: 12px; padding: 16px 18px; box-shadow: 0 6px 18px rgba(0,0,0,.15); margin: 10px 0 24px; }
+    .theme-toggle { position: fixed; right: 16px; top: 16px; border: 0; border-radius: 999px; padding: 10px 14px; background: var(--accent); color: #fff; font-weight: 700; cursor: pointer; box-shadow: 0 4px 14px rgba(0,0,0,.3); }
+    .theme-toggle:hover { filter: brightness(1.05); }
+    /* Animation douce quand le panneau apparaît */
+    .correction-panel[data-show] { animation: fadeIn .25s ease; }
+    @keyframes fadeIn { from {opacity:0; transform: translateY(-4px);} to {opacity:1; transform: translateY(0);} }
   </style>
 </head>
-
 <body>
-  <button class="theme-toggle" id="themeButton">🌙 Thème sombre</button>
+  <button id="themeButton" class="theme-toggle">🌙 Thème sombre</button>
+
   <h1><em>Cours 1 - Découverte des réseaux.pdf</em></h1>
   <h2><span class="title">Définitions et Concepts de Base des Réseaux</span></h2>
 
-  <!-- =======================
-       Réseau
-  ======================= -->
+  <!-- ================== Réseau (structure conservée) ================== -->
+  <div class="details-wrap">
+    <details class="correction">
+      <summary>
+        <span class="btn-ferme" style="color:#ffffff;">Réseau</span>
+        <span class="btn-ouvert" style="color:#ffffff;">Masquer</span>
+      </summary>
+    </details>
+  </div>
+  <div class="correction-panel" style="color:#111;">
+    <p><b>Étymologie :</b> Du latin <i>retis</i>, “filet”. Comme une <b style="color:#0074cc;">toile d’araignée</b> : chaque fil représente un <b style="color:#f9a825;">lien de communication</b> entre deux points. Si un point bouge, tout le système réagit.</p>
+    <p><b>Définition :</b> Ensemble d’équipements (ordinateurs, serveurs, téléphones…) reliés par des <b style="color:#0074cc;">liens physiques</b> (câbles, fibre optique) ou <b style="color:#0074cc;">sans fil</b> (Wi-Fi, ondes radio), capables de <b style="color:#0074cc;">communiquer</b> et de <b style="color:#0074cc;">partager des ressources</b>.</p>
+    <p><b>Exemple :</b> Chez soi, un ordinateur, un smartphone et une box Internet forment un petit réseau local (LAN).</p>
+  </div>
 
-<div class="details-wrap">
-  <details class="correction">
-    <summary>
-      <span class="btn-ferme" style="color:#ffffff;">Réseau</span>
-      <span class="btn-ouvert" style="color:#ffffff;">Masquer</span>
-    </summary>
-  </details>
-</div>
-<div class="correction-panel" style="color:#111;">
-  <p><b>Étymologie :</b> Du latin <i>retis</i>, “filet”. Comme une <b style="color:#0074cc;">toile d’araignée</b> : chaque fil représente un <b style="color:#f9a825;">lien de communication</b> entre deux points. Si un point bouge, tout le système réagit.</p>
-  <p><b>Définition :</b> Ensemble d’équipements (ordinateurs, serveurs, téléphones…) reliés par des <b style="color:#0074cc;">liens physiques</b> (câbles, fibre optique) ou <b style="color:#0074cc;">sans fil</b> (Wi-Fi, ondes radio), capables de <b style="color:#0074cc;">communiquer</b> et de <b style="color:#0074cc;">partager des ressources</b>.</p>
-  <p><b>Exemple :</b> Chez toi, ton ordinateur, ton smartphone et ta box Internet forment un petit réseau local (LAN).</p>
-</div>
-
-  <!-- =======================
-       Protocole
-  ======================= -->
+  <!-- ================== Protocole (structure conservée) ================== -->
   <div class="details-wrap">
     <details class="correction">
       <summary>
         <span class="btn-ferme" style="color:#ffffff;">Protocole</span>
         <span class="btn-ouvert" style="color:#ffffff;">Masquer</span>
       </summary>
-      <div class="correction-panel">
-        <p><b>Étymologie :</b> Du grec <i>protos</i> (“premier”) et <i>kollon</i> (“colle”) : à l’origine, la <b>feuille de règles</b> collée au début d’un document officiel.  
-        Par analogie, un protocole fixe les <b style="color:var(--highlight-color);">règles à suivre avant d’échanger</b>.</p>
-        <p><b>Définition :</b> Ensemble de <b style="color:var(--accent-color);">règles normalisées</b> précisant le <b style="color:var(--highlight-color);">format</b>, la <b style="color:var(--highlight-color);">séquence</b> et la <b style="color:var(--highlight-color);">signification</b> des messages échangés entre deux équipements.</p>
-        <p><b>Exemple :</b> Le protocole <b style="color:var(--accent-color);">HTTP</b> définit comment un navigateur web demande et reçoit une page Internet.</p>
-      </div>
     </details>
   </div>
+  <div class="correction-panel" style="color:#111;">
+    <p><b>Étymologie :</b> Du grec <i>protos</i> (“premier”) et <i>kollon</i> (“colle”) : à l’origine, la <b>feuille de règles</b> collée au début d’un document officiel.
+      Par analogie, un protocole fixe les <b style="color:#f9a825;">règles à suivre avant d’échanger</b>.</p>
+    <p><b>Définition :</b> Ensemble de <b style="color:#0074cc;">règles normalisées</b> précisant le <b style="color:#f9a825;">format</b>, la <b style="color:#f9a825;">séquence</b> et la <b style="color:#f9a825;">signification</b> des messages échangés entre deux équipements.</p>
+    <p><b>Exemple :</b> Le protocole <b style="color:#0074cc;">HTTP</b> définit comment un navigateur web demande et reçoit une page Internet.</p>
+  </div>
 
-  <!-- =======================
-       Communication de données
-  ======================= -->
+  <!-- ========== Communication de données (structure conservée) ========== -->
   <div class="details-wrap">
     <details class="correction">
       <summary>
         <span class="btn-ferme" style="color:#ffffff;">Communication de données</span>
         <span class="btn-ouvert" style="color:#ffffff;">Masquer </span>
       </summary>
-      <div class="correction-panel">
-        <p><b>Étymologie :</b> De <i>communicare</i> (“mettre en commun”) et <i>data</i> (“ce qui est donné”).  
-        Littéralement : <b style="color:var(--highlight-color);">partager des informations données</b>.</p>
-        <p><b>Définition :</b> Processus par lequel deux dispositifs échangent des informations via un <b style="color:var(--accent-color);">support physique</b> (câble, fibre, ondes radio) en suivant un <b style="color:var(--highlight-color);">protocole</b> commun.</p>
-        <p><b>Exemple :</b> Quand un ordinateur envoie un mail à un serveur, il communique des données à travers la fibre Internet.</p>
-      </div>
     </details>
   </div>
+  <div class="correction-panel" style="color:#111;">
+    <p><b>Étymologie :</b> De <i>communicare</i> (“mettre en commun”) et <i>data</i> (“ce qui est donné”).
+      Littéralement : <b style="color:#f9a825;">partager des informations données</b>.</p>
+    <p><b>Définition :</b> Processus par lequel deux dispositifs échangent des informations via un <b style="color:#0074cc;">support physique</b> (câble, fibre, ondes radio) en suivant un <b style="color:#f9a825;">protocole</b> commun.</p>
+    <p><b>Exemple :</b> Quand un ordinateur envoie un mail à un serveur, il communique des données à travers la fibre Internet.</p>
+  </div>
 
+  <!-- ========== JS minimal : n’altère pas ta structure, juste l’affichage ========== -->
   <script>
-    // 🌗 Gestion du thème clair/sombre avec stockage local
-    const button = document.getElementById("themeButton");
+    // 1) Lier chaque <details.correction> à son panneau suivant .correction-panel
+    document.querySelectorAll('.details-wrap > details.correction').forEach((det) => {
+      // le panneau est le "prochain" sibling de .details-wrap (après </details-wrap>)
+      const wrap = det.parentElement;
+      const panel = wrap.nextElementSibling;
+      if (!panel || !panel.classList.contains('correction-panel')) return;
+
+      // état initial : fermé
+      panel.style.display = 'none';
+
+      // quand on ouvre/ferme le <details>, on affiche/masque le panneau lié
+      det.addEventListener('toggle', () => {
+        if (det.open) {
+          panel.style.display = 'block';
+          panel.setAttribute('data-show','');
+        } else {
+          panel.style.display = 'none';
+          panel.removeAttribute('data-show');
+        }
+      });
+    });
+
+    // 2) Thème clair/sombre avec mémorisation
     const root = document.documentElement;
+    const btn  = document.getElementById('themeButton');
+    const saved = localStorage.getItem('theme') || 'light';
+    root.setAttribute('data-theme', saved);
+    btn.textContent = saved === 'dark' ? '☀️ Thème clair' : '🌙 Thème sombre';
 
-    // Charge le thème précédent
-    let savedTheme = localStorage.getItem("theme") || "light";
-    root.setAttribute("data-theme", savedTheme);
-    button.textContent = savedTheme === "dark" ? "☀️ Thème clair" : "🌙 Thème sombre";
-
-    // Écoute le clic
-    button.addEventListener("click", () => {
-      const current = root.getAttribute("data-theme");
-      const newTheme = current === "dark" ? "light" : "dark";
-      root.setAttribute("data-theme", newTheme);
-      localStorage.setItem("theme", newTheme);
-      button.textContent = newTheme === "dark" ? "☀️ Thème clair" : "🌙 Thème sombre";
+    btn.addEventListener('click', () => {
+      const cur = root.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
+      root.setAttribute('data-theme', cur);
+      localStorage.setItem('theme', cur);
+      btn.textContent = cur === 'dark' ? '☀️ Thème clair' : '🌙 Thème sombre';
     });
   </script>
 </body>
