Fix links by adding hyphens in filenames

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="cards-container">
 
-        <a href="GestiondeProjet.html" class="glass-card">
+        <a href="Gestion-de-Projet.html" class="glass-card">
             <h2>Gestion de Projet</h2>
             <p>30 QCM + corrections</p>
         </a>
@@ -23,7 +23,7 @@
             <p>Modules OSI, IP, Switch</p>
         </a>
 
-        <a href="BaseDeDonnées1.html" class="glass-card">
+        <a href="Base-de-Données1.html" class="glass-card">
             <h2>Base de Données 1</h2>
             <p>Modèle conceptuel + SQL</p>
         </a>
