--- a/Gestion-de-Projet.html
+++ b/Gestion-de-Projet.html
@@ -3,10 +3,55 @@
 <head>
   <meta charset="UTF-8" />
   <title>QCM – Gestion de Projet / Cybersécurité / Green IT</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="toggle-correction.css" />
 </head>
 
 <body>
+
+<!-- Bouton hamburger (mobile) -->
+<button id="nav-toggle" class="nav-toggle" aria-label="Ouvrir le menu des questions">
+  ☰
+</button>
+
+<!-- MENU LATÉRAL VERRE DÉPOLI -->
+<aside class="side-nav">
+  <div class="nav-header">
+    <div class="nav-title">Questions</div>
+  </div>
+  <nav class="nav-list">
+    <button type="button" class="nav-item" data-question="1">Q1</button>
+    <button type="button" class="nav-item" data-question="2">Q2</button>
+    <button type="button" class="nav-item" data-question="3">Q3</button>
+    <button type="button" class="nav-item" data-question="4">Q4</button>
+    <button type="button" class="nav-item" data-question="5">Q5</button>
+    <button type="button" class="nav-item" data-question="6">Q6</button>
+    <button type="button" class="nav-item" data-question="7">Q7</button>
+    <button type="button" class="nav-item" data-question="8">Q8</button>
+    <button type="button" class="nav-item" data-question="9">Q9</button>
+    <button type="button" class="nav-item" data-question="10">Q10</button>
+    <button type="button" class="nav-item" data-question="11">Q11</button>
+    <button type="button" class="nav-item" data-question="12">Q12</button>
+    <button type="button" class="nav-item" data-question="13">Q13</button>
+    <button type="button" class="nav-item" data-question="14">Q14</button>
+    <button type="button" class="nav-item" data-question="15">Q15</button>
+    <button type="button" class="nav-item" data-question="16">Q16</button>
+    <button type="button" class="nav-item" data-question="17">Q17</button>
+    <button type="button" class="nav-item" data-question="18">Q18</button>
+    <button type="button" class="nav-item" data-question="19">Q19</button>
+    <button type="button" class="nav-item" data-question="20">Q20</button>
+    <button type="button" class="nav-item" data-question="21">Q21</button>
+    <button type="button" class="nav-item" data-question="22">Q22</button>
+    <button type="button" class="nav-item" data-question="23">Q23</button>
+    <button type="button" class="nav-item" data-question="24">Q24</button>
+    <button type="button" class="nav-item" data-question="25">Q25</button>
+    <button type="button" class="nav-item" data-question="26">Q26</button>
+    <button type="button" class="nav-item" data-question="27">Q27</button>
+    <button type="button" class="nav-item" data-question="28">Q28</button>
+    <button type="button" class="nav-item" data-question="29">Q29</button>
+    <button type="button" class="nav-item" data-question="30">Q30</button>
+  </nav>
+</aside>
 
 <h1>QCM – Gestion de Projet / Cybersécurité / Green IT</h1>
 
@@ -20,7 +65,7 @@
 <h2>📘 Cours 1 – Les fondamentaux de la gestion de projet (Questions 1 à 14)</h2>
 
 <!-- QUESTION 1 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q1">
   <p><b>1)</b> Un projet se caractérise principalement par :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q1" value="A"> A. Une durée illimitée</label><br>
@@ -45,7 +90,7 @@
 </div>
 
 <!-- QUESTION 2 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q2">
   <p><b>2)</b> Le triangle d’or comprend :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q2" value="A"> A. Coût – Durée – Sécurité</label><br>
@@ -70,7 +115,7 @@
 </div>
 
 <!-- QUESTION 3 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q3">
   <p><b>3)</b> La phase « Avant-projet » sert à :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q3" value="A"> A. Installer les serveurs</label><br>
@@ -95,7 +140,7 @@
 </div>
 
 <!-- QUESTION 4 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q4">
   <p><b>4)</b> Le « kick-off », c’est :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q4" value="A"> A. La réunion de fin</label><br>
@@ -120,7 +165,7 @@
 </div>
 
 <!-- QUESTION 5 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q5">
   <p><b>5)</b> La phase BUILD correspond à :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q5" value="A"> A. L’exploitation</label><br>
@@ -145,7 +190,7 @@
 </div>
 
 <!-- QUESTION 6 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q6">
   <p><b>6)</b> La phase RUN correspond à :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q6" value="A"> A. L’exploitation / maintenance</label><br>
@@ -170,7 +215,7 @@
 </div>
 
 <!-- QUESTION 7 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q7">
   <p><b>7)</b> Une exigence fonctionnelle décrit :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q7" value="A"> A. Comment coder</label><br>
@@ -195,7 +240,7 @@
 </div>
 
 <!-- QUESTION 8 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q8">
   <p><b>8)</b> Une exigence non fonctionnelle décrit :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q8" value="A"> A. Des performances ou la sécurité</label><br>
@@ -220,7 +265,7 @@
 </div>
 
 <!-- QUESTION 9 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q9">
   <p><b>9)</b> Une spécification, c’est :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q9" value="A"> A. Pourquoi on le fait</label><br>
@@ -245,7 +290,7 @@
 </div>
 
 <!-- QUESTION 10 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q10">
   <p><b>10)</b> SMART signifie :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q10" value="A"> A. Simple, Mesuré…</label><br>
@@ -270,7 +315,7 @@
 </div>
 
 <!-- QUESTION 11 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q11">
   <p><b>11)</b> Le diagramme de Gantt sert à :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q11" value="A"> A. Gérer les incidents</label><br>
@@ -295,7 +340,7 @@
 </div>
 
 <!-- QUESTION 12 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q12">
   <p><b>12)</b> Dans RACI, le « A » doit être :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q12" value="A"> A. Multiple</label><br>
@@ -320,7 +365,7 @@
 </div>
 
 <!-- QUESTION 13 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q13">
   <p><b>13)</b> Le sponsor est :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q13" value="A"> A. Celui qui exécute</label><br>
@@ -345,7 +390,7 @@
 </div>
 
 <!-- QUESTION 14 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q14">
   <p><b>14)</b> Un « projet phénix », c’est :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q14" value="A"> A. Un projet secret</label><br>
@@ -376,7 +421,7 @@
 <h2>📙 Cours 2 – Intégrer la cybersécurité dans les projets (Questions 15 à 20)</h2>
 
 <!-- QUESTION 15 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q15">
   <p><b>15)</b> Intégrer la sécurité tôt permet :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q15" value="A"> A. D’augmenter les coûts</label><br>
@@ -401,7 +446,7 @@
 </div>
 
 <!-- QUESTION 16 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q16">
   <p><b>16)</b> Exemple d’exigence de cybersécurité :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q16" value="A"> A. Logo bleu</label><br>
@@ -426,7 +471,7 @@
 </div>
 
 <!-- QUESTION 17 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q17">
   <p><b>17)</b> Le RGPD concerne :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q17" value="A"> A. Les performances</label><br>
@@ -451,7 +496,7 @@
 </div>
 
 <!-- QUESTION 18 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q18">
   <p><b>18)</b> Le RSSI gère :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q18" value="A"> A. Le code</label><br>
@@ -476,7 +521,7 @@
 </div>
 
 <!-- QUESTION 19 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q19">
   <p><b>19)</b> DevSecOps consiste à :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q19" value="A"> A. Séparer dev et sécurité</label><br>
@@ -501,7 +546,7 @@
 </div>
 
 <!-- QUESTION 20 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q20">
   <p><b>20)</b> Une RACI dans un plan d’incident sert à :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q20" value="A"> A. Ajouter des documents</label><br>
@@ -532,7 +577,7 @@
 <h2>📗 Session 3 – Green IT & RSE (Questions 21 à 30)</h2>
 
 <!-- QUESTION 21 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q21">
   <p><b>21)</b> Green IT signifie :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q21" value="A"> A. Acheter plus de serveurs</label><br>
@@ -557,7 +602,7 @@
 </div>
 
 <!-- QUESTION 22 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q22">
   <p><b>22)</b> L’urgence climatique signifie :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q22" value="A"> A. Une simple alerte</label><br>
@@ -582,7 +627,7 @@
 </div>
 
 <!-- QUESTION 23 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q23">
   <p><b>23)</b> Le GIEC fait :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q23" value="A"> A. Des produits verts</label><br>
@@ -607,7 +652,7 @@
 </div>
 
 <!-- QUESTION 24 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q24">
   <p><b>24)</b> L’empreinte écologique mesure :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q24" value="A"> A. Le chiffre d’affaires</label><br>
@@ -632,7 +677,7 @@
 </div>
 
 <!-- QUESTION 25 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q25">
   <p><b>25)</b> La sobriété numérique consiste à :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q25" value="A"> A. Interdire les smartphones</label><br>
@@ -657,7 +702,7 @@
 </div>
 
 <!-- QUESTION 26 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q26">
   <p><b>26)</b> Les “5R” sont :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q26" value="A"> A. Réduire, Recycler, Répéter…</label><br>
@@ -682,7 +727,7 @@
 </div>
 
 <!-- QUESTION 27 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q27">
   <p><b>27)</b> Part de l’électricité consommée par le numérique en France :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q27" value="A"> A. 1%</label><br>
@@ -707,7 +752,7 @@
 </div>
 
 <!-- QUESTION 28 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q28">
   <p><b>28)</b> Deux facteurs principaux de l’impact numérique :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q28" value="A"> A. Moins d’utilisateurs</label><br>
@@ -732,7 +777,7 @@
 </div>
 
 <!-- QUESTION 29 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q29">
   <p><b>29)</b> L’ACV mesure :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q29" value="A"> A. L’usage uniquement</label><br>
@@ -757,7 +802,7 @@
 </div>
 
 <!-- QUESTION 30 -->
-<div class="qcm-question">
+<div class="qcm-question" id="q30">
   <p><b>30)</b> “IT for Green” signifie :</p>
   <div class="qcm-options">
     <label><input type="radio" name="q30" value="A"> A. L’écologie au service du numérique</label><br>
